deployment/k8s/speaker/speaker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    component: speaker
    app: houseofcommons
  name: speaker
spec:
  selector:
    matchLabels:
      component: speaker
      app: houseofcommons
  replicas: 1
  template:
    metadata:
      labels:
        component: speaker
        app: houseofcommons
    spec:
      containers:
        - name: speaker
          image: eu.gcr.io/cloud-native-deployment/speaker
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    component: speaker
    app: houseofcommons
  name: speaker
spec:
  type: NodePort
  ports:
    - name: speaker-http
      port: 8080
      targetPort: 8080
  selector:
    component: speaker
    app: houseofcommons
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: speaker-ingress
  labels:
    app: speaker
    component: houseofcommons
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /speaker(/|$)(.*)
            backend:
              serviceName: speaker
              servicePort: speaker-http
